--- a/.gitignore
+++ b/.gitignore
@@ -379,3 +379,4 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+/ffhq_dataset/shape_predictor_68_face_landmarks.dat
